Fix sidebar margin on Firefox

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -141,10 +141,48 @@
 
   #full-list {
     margin: 0 0 0 30px;
-    padding: 10px 20px 40px;
+    padding: 10px 20px;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     .flex(1);
+
+    li {
+      padding: 0;
+      line-height: 27px;
+
+      &.active {
+        border-left: none;
+      }
+
+      &.active > a, &.clicked > a {
+        color: @white;
+      }
+
+      &.open > ul {
+        display: block;
+      }
+
+      &.nesting-context {
+        opacity: 0.6;
+      }
+
+      &.nested {
+        margin-left: 2ex;
+      }
+    }
+
+    li.group {
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 0.8em;
+      margin: 2.0em 0 0;
+      line-height: 1.8em;
+      color: @groupGray;
+    }
+
+    &>li:last-child {
+      margin-bottom: 30px;
+    }
 
     ul {
       display: none;
@@ -191,40 +229,6 @@
           display: block;
         }
       }
-    }
-
-    li {
-      padding: 0;
-      line-height: 27px;
-
-      &.active {
-        border-left: none;
-      }
-
-      &.active > a, &.clicked > a {
-        color: @white;
-      }
-
-      &.open > ul {
-        display: block;
-      }
-
-      &.nesting-context {
-        opacity: 0.6;
-      }
-
-      &.nested {
-        margin-left: 2ex;
-      }
-    }
-
-    li.group {
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 0.8em;
-      margin: 2.0em 0 0;
-      line-height: 1.8em;
-      color: @groupGray;
     }
   }
 }
